rgbds-0.6.1/test/asm/section-union.err
error: section-union.asm(37):
    Section already declared as union section
FATAL: section-union.asm(37):
    Cannot create section "test" (1 error)
